--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "daqhats>=1.4.1.0",
+    "dash>=3.0.4",
     "matplotlib>=3.10.3",
-    "mcculw>=1.0.0",
     "notebook>=7.4.2",
     "numpy>=2.2.5",
-    "openpyxl>=3.1.5",
-    "pandas>=2.2.3",
     "pyqtgraph>=0.13.7",
+    "spidev>=3.7",
 ]
