--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "daqhats>=1.4.1.0",
     "dash>=3.0.4",
+    "gpiod>=2.3.0",
     "matplotlib>=3.10.3",
     "notebook>=7.4.2",
     "numpy>=2.2.5",
